--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 	<header class="menu">
 		<div class="logo">
-			<img src="./img/metamédia.png" width="300">
+			<img src="./metamédia.png" width="300">
 
 		</div>
 	</header>
 	<nav>
 		<div class="Conteudo">
 			<div class="ilustro">
-				<img src="./img/calculos.png" width="300px"> 
+				<img src="./calculos.png" width="300px"> 
 			</div>
 		</div>
 		
