--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		
-		<a href="URL"><button class="botao">Comece Agora</button></a> 
+		<a href="./Calculadora.html"><button class="botao">Comece Agora</button></a> 
 	</nav>
 	
 </body>
