--- a/Calculadora.html
+++ b/Calculadora.html
@@ -13,12 +13,12 @@
 <body>
 	<header class="menu">
 		<div class="logo">
-			<img src="./img/metamédia.png" width="230px">
+			<img src="./metamédia.png" width="230px">
 
 		</div>
 	</header>
 	<div class="boneco">
-		<img src="./img/jose.png" width="80px">
+		<img src="./jose.png" width="80px">
 		<h1>Preencha de acordo com suas notas</h1>
 	</div>
 
