--- a/tela_inicial.html
+++ b/tela_inicial.html
@@ -56,10 +56,10 @@
 </style>
 <body>
   <main>
-   <div class="icon">  <img src="./img/matematica.png" alt="icone" height="200" width="200">  </div>
+   <div class="icon">  <img src="./matematica.png" alt="icone" height="200" width="200">  </div>
   </main>
   <div class="paragrafo">
-    <h2>Calcule sua nota de maneira rápida e eficaz.</h2>
+    <h2>Calcule sua média anual de maneira rápida e eficaz.</h2>
   </div>
   <div class="btn">
     <a href="./Calculadora.html"><button>COMEÇAR</button></a>
