--- a/Calculadora.html
+++ b/Calculadora.html
@@ -11,6 +11,10 @@
     <title>Document</title>
 </head>
 <body>
+	<header class="title">
+		<h1>Calculadora de Média</h1>
+
+	</header>
 	
  <main class="big">
 	<div class="entrada">
