--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2>Calcule sua média anual de maneira rápida e eficaz.</h2>
   </div>
   <div class="btn">
-    <a href="./Calculadora.html"><button>COMEÇAR</button></a>
+    <a href="./CalculadoraM.html"><button>COMEÇAR</button></a>
   </div>
 </body>
 </html>
