--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    <div class="icon">  <img src="./matematica.png" alt="icone" height="200" width="200">  </div>
   </main>
   <div class="paragrafo">
-    <h2>Calcule sua média anual de maneira rápida e eficaz.</h2>
+    <h2>Calcule sua média rápido e fácil.</h2>
   </div>
   <div class="btn">
     <a href="./CalculadoraM.html"><button>COMEÇAR</button></a>
