--- a/diagnostico.html
+++ b/diagnostico.html
@@ -37,7 +37,7 @@ button {
   bottom: 20px;
   width: 300px;
   border:none;
-  box-shadow: 2px 3px 5px #e5625c;
+  box-shadow: 3px 4px 1px #8c322d;
 }
 
 h1 {
@@ -74,7 +74,7 @@ p{
       if (media >= 6) {
         imagemResultado.src = "aproved.jpg";
         document.getElementById('apRp').innerText = "APROVADO"
-        document.getElementById('vf').innerText = `Parabéns você passou!`
+        document.getElementById('vf').innerText = `Parabéns, você passou!`
       } else {
         imagemResultado.src = "reproved.jpg"; 
         if (valFal > 10) {
